[workspace]
members = ["."]
resolver = "2"

[workspace.lints.rust]
unsafe_code     = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
wildcard_imports          = "allow"
module_name_repetitions   = "allow"
must_use_candidate        = "allow"
missing_errors_doc        = "allow"
missing_panics_doc        = "allow"
items_after_statements    = "allow"
struct_excessive_bools    = "allow"
similar_names             = "allow"
many_single_char_names    = "allow"
unnecessary_literal_bound = "allow"
doc_markdown              = "allow"
ref_option                = "allow"
fn_params_excessive_bools = "allow"
needless_pass_by_value    = "allow"
cast_possible_wrap        = "allow"
cast_possible_truncation  = "allow"
cast_precision_loss       = "allow"
cast_sign_loss            = "allow"
unwrap_in_result          = "warn"
panic                     = "warn"
todo                      = "warn"
dbg_macro                 = "warn"
print_stdout              = "warn"
print_stderr              = "warn"

[package]
name = "tokimo-channel"
version = "0.1.0"
edition = "2024"
description = "Bidirectional channel abstraction for Tokimo – outbound notifications + inbound event ingress (Feishu, WeCom, Telegram, Email, Webhook, …)"
build = "build.rs"

[lib]
name = "tokimo_channel"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["json"] }
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
hmac = "0.13"
http = "1"
prost = { version = "0.14", features = ["derive"] }
reqwest = { version = "0.13", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonc-parser = { version = "0.32", features = ["serde"] }
sha1 = "0.11"
sha2 = "0.11"
ed25519-dalek = { version = "2", default-features = false, features = ["alloc"] }
hex = "0.4"
aes = { version = "0.8", default-features = false }
md-5 = "0.11"
cbc = { version = "0.1", features = ["alloc", "block-padding"] }
quick-xml = "0.36"
thiserror = "2"
tokio = { version = "1", features = ["sync", "time", "macros", "rt"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
# Direct dep so we can pin the rustls crypto provider at startup. The workspace
# pulls both `ring` and `aws-lc-rs` transitively, so rustls 0.23 cannot pick a
# default — connect_async panics inside the spawned WS pump and the task dies
# silently. We pick `aws_lc_rs` since `russh` already links it.
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
tokio-util = "0.7"
tracing = "0.1"
url = "2"
urlencoding = "2"
uuid = { version = "1", features = ["v4", "serde"] }
rust-client-api = { path = "../rust-client-api" }

[build-dependencies]
prost-build = "0.14"
protoc-bin-vendored = "3"

[lints]
workspace = true
